# rm4mt

./: .gitignore  README.md  pyproject.toml
rm4mt_dataset_process/: ape-quest.py  ape-quest.sh  camt.py  camt.sh  commonsense_mt.py  commonsense_mt.sh  drt_gutenberg.py  drt_gutenberg.sh  liteval.py  liteval.sh  ragtrans.py  ragtrans.sh  terminology.py  terminology.sh  wmt23_bio_doc.py  wmt23_bio_doc.sh  wmt23_bio_sentence.py  wmt23_bio_sentence.sh  wmt24_bio.py  wmt24_bio.sh  wmt_literary_2_jsonl.py  wmt_literary_2_jsonl.sh
rm4mt_eval/: compute_comet.py  compute_comet.sh  compute_gea.py  compute_gea.sh  compute_gemba.py  compute_gemba.sh  compute_grb_grf.py  compute_grb_grf.sh  compute_grf.sh  eval.py  eval.sh  eval_api_gemini.py  eval_api_gemini.sh  eval_api_grok.py  eval_api_grok.sh  eval_api_qwen.sh  eval_cogito.py  eval_cogito.sh  eval_drt.py  eval_drt.sh  eval_local.py  eval_local.sh  eval_qwen.py  eval_qwen.sh  post_editing_qwen.py  post_editing_qwen.sh  submit_all.sh  submit_all_api_gemini.sh  submit_all_api_grok.sh  submit_all_api_qwen.sh  submit_all_cogito.sh  submit_all_drt.sh  submit_all_local.sh  submit_all_post_editing_qwen.sh  submit_all_qwen.sh  token_count.ipynb  upload_2_sheet.py  upload_2_sheet.sh  vis_comet.ipynb  vis_gemba.ipynb
rm4mt_eval/analysis/: analysis_comet.ipynb  analysis_cometkiwi.ipynb  analysis_gea_100.ipynb  analysis_gea_5.ipynb  analysis_grb.ipynb  analysis_grf.ipynb  analysis_post_editing.ipynb  analysis_wait.ipynb  drt.ipynb  drt_performance_vs_tokens.ipynb  grok_grb.ipynb  grok_grf.ipynb
